package edu.fiuba.algo3.modelo.pregunta;

import edu.fiuba.algo3.modelo.respuesta.Respuesta;

public interface Penalizable {
    public void penalizarRespuesta(Respuesta respuesta);
}
